  EntityConnectionUtil.copyEntities() bug fixed, did not clear primary key values correctly before insert
  IncrementKeyGenerator now behaves like the SequenceGenerator, skips the id generation if a value is present
  EntityConnection.selectPropertyValues() replaced by selectValues()
0.9.5 [incompatible api: CriteriaSet, SimpleCriteria]
  CriteriaSet changed to an interface, CriteriaUtil.DefaultCriteriaSet added, SimpleCriteria moved to CriteriaUtil.StringCriteria, factory methods added to CriteriaUtil
  EntityConnectionProviders.createConnectionProvider() renamed to connectionProvider()
  EntityConnectionProviders.connectionProvider(EntityConnection) added
  EntityTablePanel.createStaticEntityTablePanel(), resulting panel is now read-only and without popup menu and south panel
  CriteriaUtil.DefaultStringCriteria.writeObject() and readObject() implemented, tested
  UiUtil, component returned from configuration methods
  PropertySummaryModel moved to common.table package and renamed ColumnSummaryModel, implementation as well
  EntityTableModel.SummaryValueProvider moved to AbstractFilteredTableModel.DefaultColumnValueProvider
  EntityTablePanel.summaryPanel moved to FilteredTablePanel
  H2Database.initializeDatabase() bug fixed, only tries to initialize an embedded database if it is required
0.9.6
  common.swing.model and common.swing.ui packages added, common.ui and common.model refactored accordingly
  org.jminor.framework.client package remaned to swing
  org.jminor.framework.swing moved to org.jminor.swing.framework and org.jminor.common.swing moved to org.jminor.swing.common
  Refactoring in order to move usages of Configuration out of core classes
  Source directory structure improved, now follows maven/gradle best practices
  Plugin and demo sources moved, unit test dependencies fixed, build file refactored
  Reorganized demo sql scripts and reports
  EntityUtil.hash... renamed to map...